[gd_scene load_steps=5 format=2]

[ext_resource path="res://BaseMenu/SubMenuTheme.tres" type="Theme" id=1]
[ext_resource path="res://BaseMenu/MarvinVisionsSmall-Medium.otf" type="DynamicFontData" id=2]
[ext_resource path="res://BaseMenu/BusSlider.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 18
font_data = ExtResource( 2 )

[node name="BusSlider" type="HBoxContainer"]
margin_top = 306.0
margin_right = 400.0
margin_bottom = 329.0
theme = ExtResource( 1 )
alignment = 2
script = ExtResource( 4 )

[node name="Label" type="Label" parent="."]
margin_left = 223.0
margin_right = 290.0
margin_bottom = 23.0
custom_fonts/font = SubResource( 1 )
text = "Volume"

[node name="HSlider" type="HSlider" parent="."]
margin_left = 300.0
margin_right = 400.0
margin_bottom = 23.0
rect_min_size = Vector2( 100, 0 )
size_flags_vertical = 1
max_value = 1.0
step = 0.01

[connection signal="focus_entered" from="HSlider" to="." method="_on_HSlider_focus_entered"]
[connection signal="focus_exited" from="HSlider" to="." method="_on_HSlider_focus_exited"]
[connection signal="value_changed" from="HSlider" to="." method="_on_HSlider_value_changed"]
